# Quantropy

./: .gitignore  .travis.yml  API.py  Database.py  Dockerfile  LICENSE  MAtilDA Part III. Ordo ab Chao (or Investing Styles).ipynb  MAtilDA Part IV. συνεργία (or Portfolio Optimization).ipynb  MAtilDA Part V - Trading Strategies.ipynb  MAtilDA Part ∅. A Priori (or Preamble).ipynb  README.md  api.py  config.py  demo.py  exceptions_library.py  hi.py  interactive_matilda.ipynb  interview.py  requirements.txt  rock_paper_scissors.py  setup.cfg  setup.py  temp.py  testing.py
FactorBox/: asset_pricing_models.py
Quantopian/: Long-Short Equity.py
Quantropy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
company_analysis/: accounting_ratios.py  financial_metrics.py  financial_statements_entries.py  scoring_models.py  time_value_of_money.py  valuation_models.py  valuation_new.py
data/: Factors-Data.xlsx  Macro-Data.xlsx  Nasdaq-Companies.xlsx  US-Stock-Symbols.xlsx
data_scraping/: company_metadata.py  edgar_scraper.py  excel_helpers.py  financial_data_scraper.py  regex_patterns.py  unit_tests.py
financial_education/: MAtilDA Part I. Ex nihilo (or Data Collection).ipynb  MAtilDA Part II. A Minore ad Maius (or Company Analysis).ipynb  Seeking_Order_in_Chaos_The_Art_of_Embracing_Randomness_in_the_Financial_Markets.ipynb  testing.py
financial_modeling/: asset_pricing_models.py  bankruptcy_models.py  earnings_manipulation_models.py  financial_distress_models.py  financial_fraud_models.py
financial_statement_analysis/: accounting_ratios.py  financial_metrics.py  (+2 more)
(+586 files in other folders)
