[metadata]
# replace with your username:
name = Quantropy
version = 0.0.8
author = Alain Daccache
author_email = alaindacc@gmail.com
description = Package to research, develop, and deploy investment strategies
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AlainDaccache/Quantropy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6